@@ -25,6 +25,8 @@
         <module>distribute</module>
         <module>tools-utils</module>
         <module>tools-fiddler</module>
+        <module>tools-common</module>
+        <module>tools-resource</module>
     </modules>
 
     <properties>
@@ -216,6 +218,12 @@
                         <configuration>
                             <!-- compile everything to ensure module-info contains right entries -->
                             <release>${java.version}</release>
+                            <compilerArgs>
+                                <arg>--add-opens=java.base/java.security=ALL-UNNAMED</arg>
+                                <arg>--add-opens=java.base/sun.security.x509=ALL-UNNAMED</arg>
+                                <arg>--add-opens=java.base/sun.security.tools.keytool=ALL-UNNAMED</arg>
+                                <arg>--add-opens=javafx.web/com.sun.javafx.webkit=ALL-UNNAMED</arg>
+                            </compilerArgs>
                         </configuration>
                     </execution>
                 </executions>
@@ -276,16 +284,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
                     </argLine>
                 </configuration>
             </plugin>
